--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
-language: java
+language: java 
 jdk:
 - openjdk8
-script: ant build
+
+addons: 
+ sonarcloud:
+  organization: gabrylele98 
+  token:
+   secure: 15c6ec2a0b4ccbbd456b4ac7e98028e6649f6107 
+script:
+- ant build
+- sonar-scanner
