--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,14 @@
-sonar.projectKey=gabrylele98_TestSonarCloud1
-sonar.projectName=TestSonarCloud1
+sonar.projectKey=gabrylele98_TorVergHub
+sonar.projectName=TorVergHub
 
 # =====================================================
 #   Meta-data for the project
 # =====================================================
 
-sonar.links.homepage=https://github.com/gabrylele98/TestSonarCloud1
-sonar.links.ci=https://travis-ci.org/gabrylele98/TestSonarCloud1
-sonar.links.scm=https://github.com/gabrylele98/TestSonarCloud1
-sonar.links.issue=https://github.com/gabrylele98/TestSonarCloud1/issues
+sonar.links.homepage=https://github.com/gabrylele98/TorVergHub
+sonar.links.ci=https://travis-ci.org/gabrylele98/TorVergHub
+sonar.links.scm=https://github.com/gabrylele98/TorVergHub
+sonar.links.issue=https://github.com/gabrylele98/TorVergHub/issues
 
 
 # =====================================================
@@ -17,7 +17,7 @@ sonar.links.issue=https://github.com/gabrylele98/TestSonarCloud1/issues
 
 sonar.host.url=https://sonarcloud.io
 sonar.organization=gabrylele98
-sonar.login=15c6ec2a0b4ccbbd456b4ac7e98028e6649f6107 
+sonar.login=f11b445d793e41d43e424919ef013619bcbe8815
 sonar.sources=src
 sonar.language=java
 
